<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top|center_horizontal"
    android:background="@color/main_title_back"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/bio_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/bio_title"
        android:textColor="@color/bio_title_text"
        android:textSize="24sp" />

    <ScrollView
        android:id="@+id/bio_main_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" >

        <LinearLayout
            android:id="@+id/bio_layout_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/bio_image_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/defaultimage" 
                android:contentDescription="@string/default_image_text" />

            <TextView
                android:id="@+id/bio_first_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/bio_first_text"
                android:textColor="@color/bio_first_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/bio_second_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/bio_second_text"
                android:textColor="@color/bio_second_text"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/bio_third_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/bio_third_text"
                android:textColor="@color/bio_third_text"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>