<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/main_title_back"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/email_title"
        android:layout_width="match_parent"
       	android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/email_title"
        android:textColor="@color/email_title_text"
        android:textSize="24sp"
        android:textStyle="italic" />

    <LinearLayout
        android:id="@+id/email_linear"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/email_image_1"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/defaultimage"
            android:contentDescription="@string/default_image_text" />

        <ImageView
            android:id="@+id/email_image_2"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/defaultimage" 
            android:contentDescription="@string/default_image_text" />

        <ImageView
            android:id="@+id/email_image_3"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/defaultimage" 
            android:contentDescription="@string/default_image_text" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/email_relative"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center" >

        <Button
            android:id="@+id/email_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/tab_selected"
            android:onClick="sendEmail"
            android:text="@string/email_button_text"
            android:textColor="@color/email_button_text"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>